--- a/src/components/client/backgrounds/LiquidEther.css
+++ b/src/components/client/backgrounds/LiquidEther.css
@@ -4,4 +4,14 @@
   width: 100%;
   height: 100%;
   touch-action: none;
+  /* Enhanced touch support */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* Better touch responsiveness */
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
 }
